Added some more validation messages.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,9 +1,8 @@
 #Set names of properties
-recipe.description=Aciklama123
-
+recipe.description=Description
 
 #Validation Messages
-NotBlank.recipe.description=Description can not be left blank!
+NotBlank.recipe.description={0} can not be left blank!
 Size.recipe.description={0} must be between {2} and {1} characters long!
 Max.recipe.cookTime={0} must be less then {1}.
 URL.recipe.url=Please provide a valid URL.
