--- a/src/main/resources/messages_tr_TR.properties
+++ b/src/main/resources/messages_tr_TR.properties
@@ -1,3 +1,7 @@
-recipe.description=Aciklama (TR)
+recipe.description=Aciklama
 
-Size.recipe.description={0}  {2} ila {1} aras?nda karakter sayisina sahip olmali!
+Size.recipe.description={0}  {2} ila {1} arasinda karakter sayisina sahip olmali!
+NotBlank.recipe.description={0} bos biraklilamaz!
+Max.recipe.cookTime={0} En az olmas? gereken sayi {1}.
+URL.recipe.url=Lutfen gecerli bir URL giriniz!
+NotBlank.recipe.url=URL Bos olamaz!
